Fix menu bar on mobile screen #123

--- a/static/map/style.css
+++ b/static/map/style.css
@@ -250,19 +250,19 @@ ul.leaflet-control-geocoder-alternatives {
 }
 
 @media(max-width:399px) {
-  #menu-lang, #menu-openstreetmapfr, #menu-byuser, #menu-relation_analyser, #menu-statistics, #menu-help, #menu-delay {
+  #topmenu #menu-lang, #topmenu #menu-openstreetmapfr, #topmenu #menu-byuser, #topmenu #menu-relation_analyser, #topmenu #menu-statistics, #topmenu #menu-help, #topmenu #menu-delay {
     display: none;
   }
 }
 
 @media(min-width:400px) and (max-width:767px) {
-  #menu-byuser, #menu-relation_analyser, #menu-statistics, #menu-help, #menu-delay {
+  #topmenu #menu-byuser, #topmenu #menu-relation_analyser, #topmenu #menu-statistics, #topmenu #menu-help, #topmenu #menu-delay {
     display: none;
   }
 }
 
 @media(min-width:768px) and (max-width:991px) {
-  #menu-byuser, #menu-relation_analyser, #menu-statistics, #menu-help {
+  #topmenu #menu-byuser, #topmenu #menu-relation_analyser, #topmenu#menu-statistics, #topmenu #menu-help {
     display: none;
   }
 }
